# quillpapers

./: .env.example  .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js
pdf_processing/: Cargo.toml
pdf_processing/src/: main.rs  question_paper.rs
pdf_processing_py/: pyproject.toml
pdf_processing_py/qp_parser/: question.py  question_paper.py  question_paper.test.py
pdf_processing_py/src/: answer_paper.py  answer_paper.test.py  parse_filename.py  parse_filename.test.py  question_paper.py  question_paper.test.py
pdf_processing_py/src/answer_paper_parser/: answer_paper.py
pdf_processing_py/src/qp_parser/: question.py  question_paper.py  question_paper.test.py
pdf_processing_py/src/utils/: parse_filename.py  parse_filename.test.py
pdf_processing_rust/src/: question_paper.rs
src/: app.html  global.d.ts
src/lib/data/: subjects.js  subjects.json
src/lib/db/: error_report_functions.sql  get_question_functions.sql  index.ts  setup.sql
src/lib/helpers/: db.js  db_pg.js  shortcuts.js  timer.js
src/lib/utils/: timer.ts
src/routes/: __layout.svelte  index.svelte
src/routes/[subject]/: casual.svelte  index.svelte  speedrun.svelte
src/routes/[subject_code]/: __layout.svelte  index.svelte
src/routes/api/: errorReport.js  flag.js  randomQuestion.js  speedrun.js
static/: app.css  bootstrap-reboot.min.css
website/: .gitignore  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tsconfig.json  vite.config.js
website/src/: app.css  app.html  global.d.ts
website/src/lib/db/: index.ts  (+2 more)
(+71 files in other folders)
